llm-openai/src/snapshots/llm_openai__responses__tests__responses_request_pointer_and_compaction_summary.snap
---
source: llm-openai/src/responses.rs
expression: body
---
{
  "model": "gpt-5.1",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": "[archived: bash cargo test: 91000 bytes, exit 0; expand 01ARZ3NDEKTSV4RRFFQ69G5FB0]"
    },
    {
      "type": "message",
      "role": "user",
      "content": "now fix the failing test"
    }
  ],
  "stream": true,
  "store": false,
  "max_output_tokens": 16384,
  "reasoning": {
    "effort": "high"
  },
  "instructions": "<tool specs>\n\nYou are cox.",
  "tools": [
    {
      "type": "function",
      "name": "read",
      "description": "Read a file",
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          }
        }
      }
    }
  ]
}
